--- a/main.css
+++ b/main.css
@@ -154,6 +154,7 @@ ul {
 
 .icon-responsive {
   width: 100%;
+  margin-top: -15%;
 }
 
 .input123_responsive {
@@ -192,7 +193,6 @@ ul {
 
 .myrecentwork {
   font-family: "roboto", sans-serif;
-  font-weight: 500;
   font-size: 40px;
   line-height: 52px;
   text-align: left;
@@ -429,6 +429,7 @@ button:disabled {
 .third {
   display: grid;
   grid-template-rows: auto;
+  margin-top: 10%;
 }
 
 .header {
@@ -445,9 +446,10 @@ button:disabled {
 }
 
 nav img {
-  width: 60px;
+  width: 29px;
   height: 60px;
   padding-right: 39.33px;
+  align-items: center;
 }
 
 .logo {
@@ -512,6 +514,18 @@ div a {
   .separator-text1 {
     width: 4840px;
     margin-left: -2%;
+    
+  }
+
+  .separator-text1-version{
+    width: 4840px;
+    margin-left: -2%;
+    display: none;
+  }
+
+  .separator{
+    width: 160%;
+   
   }
 
   .paragraph-text1 {
@@ -521,8 +535,8 @@ div a {
   }
 
   .paragraph-text12 {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 25%;
+    margin-right: 25%;
   }
 
   .maintextfooter {
@@ -538,9 +552,7 @@ div a {
 
   .maintextfooter1 {
     font-family: "roboto", sans-serif;
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 44px;
+    font-size: 47px;
     color: rgb(147, 144, 255);
     text-align: center;
     margin: 40px auto;
@@ -599,6 +611,7 @@ div a {
   .separator-text-responsive {
     width: 2000px;
     margin: 0 auto;
+    display: none;
   }
 
   .separator-text {
@@ -607,7 +620,8 @@ div a {
   }
 
   .separator-text-responsive1 {
-    width: 600px;
+    width: 40%;
+    margin-left: 12%;
   }
 
   .styling1x-responsive {
@@ -681,10 +695,11 @@ div a {
   }
 
   .columnmain-version {
-    width: 80%;
+    width: 32%;
     display: flex;
     gap: -30px;
     justify-content: space-between;
+    margin-left: 18%;
   }
 
   .firsttext {
@@ -739,7 +754,8 @@ div a {
   }
 
   .parrafo {
-    margin-left: -20%;
+    margin-left: 5%;
+    margin-right: 43%;
   }
 
   .icon-version {
@@ -747,11 +763,12 @@ div a {
   }
 
   .work-section {
-    margin-left: 160px;
+    margin-left: 83px;
   }
 
   .second-part-1-section {
     display: flex;
+    margin-top: 4%;
   }
 
   .icon-section {
@@ -761,7 +778,7 @@ div a {
   }
 
   .work-section-right {
-    margin-right: 160px;
+    margin-right: 89px;
   }
 
   body {
@@ -769,7 +786,11 @@ div a {
     background-color: rgb(25, 23, 101);
     background-image: url(./two.circles.header.svg);
     background-repeat: no-repeat;
-    background-position: 20% 5%;
+    background-position: 40% 5%;
+  }
+
+  .myrecentwork-version{
+    display: none;
   }
 }
 
@@ -938,5 +959,26 @@ div a {
     background-image: url(./two.circles.header.svg);
     background-repeat: no-repeat;
     background-position: 15% 5%;
+  }
+  .myrecentwork-version{
+    
+  font-family: "roboto", sans-serif;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: left;
+  color: rgb(148, 144, 255);
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-right: -60px;
+  flex-wrap: wrap;
+  padding-left: 24px;
+  padding-top: 35px;
+  width: 327px;
+  height: 104px;
+  }
+
+  .myrecentwork{
+    display: none;
   }
 }
