--- a/main.css
+++ b/main.css
@@ -154,7 +154,7 @@ ul {
 
 .icon-responsive {
   width: 100%;
-  margin-top: -15%;
+  margin-top: -10%;
 }
 
 .input123_responsive {
@@ -274,6 +274,24 @@ button:disabled {
   margin-right: 143px;
 }
 
+.button123 {
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  gap: 10px;
+  border-color: rgb(125, 115, 252);
+  background-color: rgb(147, 144, 255);
+  justify-content: center;
+  margin: auto;
+  color: rgb(255, 255, 255);
+  font-family: "roboto", sans-serif;
+  margin-top: 40px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 160px;
+  height: 48px;
+}
+
 .button12 {
   display: flex;
   align-items: center;
@@ -320,8 +338,7 @@ button:disabled {
   display: flex;
   padding-left: 24px;
   padding-right: 24px;
-  width: 327px;
-  margin: 10% auto;
+  margin-top: 11%;
 }
 
 .form-center {
@@ -343,6 +360,8 @@ button:disabled {
   display: flex;
   margin: 0 auto;
   text-align: center;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .input1234_responsive {
@@ -514,18 +533,16 @@ div a {
   .separator-text1 {
     width: 4840px;
     margin-left: -2%;
-    
   }
 
-  .separator-text1-version{
+  .separator-text1-version {
     width: 4840px;
     margin-left: -2%;
     display: none;
   }
 
-  .separator{
+  .separator {
     width: 160%;
-   
   }
 
   .paragraph-text1 {
@@ -537,6 +554,7 @@ div a {
   .paragraph-text12 {
     margin-left: 25%;
     margin-right: 25%;
+    margin-bottom: 5%;
   }
 
   .maintextfooter {
@@ -569,6 +587,7 @@ div a {
     font-size: 20px;
     line-height: 28px;
     text-align: center;
+    margin-top: 4%;
   }
 
   .footer-icons-responsive-desktop {
@@ -581,6 +600,8 @@ div a {
     font-size: 100px;
     align-items: center;
     column-gap: 30px;
+    margin-top: 11%;
+    margin-bottom: 0%;
   }
 
   .styling1-section {
@@ -789,8 +810,23 @@ div a {
     background-position: 40% 5%;
   }
 
-  .myrecentwork-version{
+  .myrecentwork-version {
     display: none;
+  }
+
+  .button1-color {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px;
+    gap: 10px;
+    background-color: rgb(147, 144, 255);
+    border-color: rgb(125, 115, 252);
+    justify-content: space-around;
+    width: 100px;
+    margin-left: 30px;
+    color: rgb(255, 255, 255);
+    font-family: "roboto", sans-serif;
   }
 }
 
@@ -960,25 +996,30 @@ div a {
     background-repeat: no-repeat;
     background-position: 15% 5%;
   }
-  .myrecentwork-version{
-    
-  font-family: "roboto", sans-serif;
-  font-size: 40px;
-  line-height: 52px;
-  text-align: left;
-  color: rgb(148, 144, 255);
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding-right: -60px;
-  flex-wrap: wrap;
-  padding-left: 24px;
-  padding-top: 35px;
-  width: 327px;
-  height: 104px;
+
+  .myrecentwork-version {
+    font-family: "roboto", sans-serif;
+    font-size: 40px;
+    line-height: 52px;
+    text-align: left;
+    color: rgb(148, 144, 255);
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-right: -60px;
+    flex-wrap: wrap;
+    padding-left: 24px;
+    padding-top: 35px;
+    width: 327px;
+    height: 104px;
   }
 
-  .myrecentwork{
+  .myrecentwork {
     display: none;
+  }
+
+  .separator-text1-version {
+    width: 4840px;
+    margin-left: -2%;
   }
 }
