--- a/main.css
+++ b/main.css
@@ -828,6 +828,19 @@ div a {
     color: rgb(255, 255, 255);
     font-family: "roboto", sans-serif;
   }
+
+  .first{
+   animation:transitionIn 0.75s;
+}
+@keyframes transitionIn{
+   from{
+       opacity:0;
+       transform:rotateX(-10deg);
+    }
+       
+   to{
+     opacity:1;
+       transform:rotateX(0);
 }
 
 @media only screen and (max-width: 768px) {
